--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <h1>My First Heading</h1>
 <p>My first paragraph.</p>
 
+
+<div class="npf_wgts" data-height="400px" data-w="765f6622b39b3e0b613a0984d01d6759"></div>   
+
+   <script type="text/javascript">var s=document.createElement("script"); s.type="text/javascript"; s.async=true; s.src="https://widgets.s22.nopaperforms.in/emwgts.js"; document.body.appendChild(s); </script>
+
+
 </body>
 </html>
 
