--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<title>Wigets Testing</title>
+<title>Widgets Testing</title>
 <body>
 
-<h1>Wigets Testing</h1>
+<h1>Widgets Testing</h1>
 
 
 <div class="npf_wgts" data-height="400px" data-w="765f6622b39b3e0b613a0984d01d6759"></div>   
