--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <title>Widgets Testing</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 <body>
 
 <h1>Widgets Testing</h1>
