--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 
 <h1>Widgets Testing</h1>
 
-<div class="npf_wgts" data-height="400px" data-w="7a3590c796e5458e58abdbd885b11ad4"></div>
-<script type="text/javascript">var s=document.createElement("script");     s.type="text/javascript"; s.async=true; s.src="https://widgets.s29.nopaperforms.in/emwgts.js";     document.body.appendChild(s);</script>
+<div class="npf_wgts" data-height="400px" data-w="91417a0f63179d933617d74133cf2030"></div>
+
+<script type="text/javascript">
+var s=document.createElement("script"); 
+s.type="text/javascript"; 
+s.async=true; 
+s.src="https://widgets.s22.nopaperforms.in/emwgts.js";
+document.body.appendChild(s);
+</script>
 
 </body>
 </html>
