--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
 <h1>Widgets Testing</h1>
 
-<div class="npf_wgts" data-height="400px" data-w="91417a0f63179d933617d74133cf2030"></div>
+<div class="npf_wgts" data-height="400px" data-w="6b774a07c93c59ad6994cc2ab9e4cd69"></div>
 
 <script type="text/javascript">
 var s=document.createElement("script"); 
 s.type="text/javascript"; 
 s.async=true; 
-s.src="https://widgets.s22.nopaperforms.in/emwgts.js";
+s.src="https://widgets.nopaperforms.com/emwgts.js";
 document.body.appendChild(s);
 </script>
 
