--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Widgets Testing</title>
+<title>Widgets Testing live</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 <body>
