--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <title>Widgets Testing live</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <META NAME="robots" CONTENT="noindex,nofollow">
+
+
 
 <body>
 
